--- a/buildSrc/dependencies.gradle
+++ b/buildSrc/dependencies.gradle
@@ -11,6 +11,7 @@ class SharedDependencies {
 
     Closure globalJavaConfig = {
         apply plugin: 'java'
+        apply plugin: 'war'
         apply plugin: 'idea'
         sourceCompatibility = 1.9
         targetCompatibility = 1.9
@@ -58,6 +59,7 @@ class SharedDependencies {
         testCompile group: "org.hamcrest", name: "hamcrest-core", version: "1.3"
         testCompile group: "org.hamcrest", name: "hamcrest-library", version: "1.3"
         testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+        testCompile group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.5'
         testCompile group: 'org.springframework', name: 'spring-test', version: "$springVersion"
     }
 }
