--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,11 @@ project("autosalon") {
         providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'
         providedCompile group: 'javax.servlet.jsp', name: 'javax.servlet.jsp-api', version: '2.3.1'
         compile group: 'jstl', name: 'jstl', version: '1.2'
+
+        compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.9.v20180320'
+        compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.9.v20180320'
+
+        compile group: 'javassist', name: 'javassist', version: '3.12.1.GA'
     }
     war {
         archiveName='autosalon.war'
