--- a/buildSrc/analyze.gradle
+++ b/buildSrc/analyze.gradle
@@ -64,8 +64,8 @@ jacocoTestReport {
     }
     afterEvaluate {
         classDirectories = files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: ['**/model/**', '**/connection/**', '**/config/**', '**/entity/**',
-                                        '**/*Main*/**', '**/roman/**'])
+            fileTree(dir: it, exclude: ['**/model/**', '**/entity/**', '**/connection/**', '**/config/**',
+                                        '**/exception/**', '**/*Main*/**', '**/roman/**'])
         })
     }
 }
