--- a/build.gradle
+++ b/build.gradle
@@ -30,15 +30,14 @@ task wrapper(type: Wrapper) {
 }
 
 project("autosalon") {
+    apply plugin: 'war'
+
     dependencies{
         compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'
         compile group: 'javax.servlet.jsp', name: 'javax.servlet.jsp-api', version: '2.3.1'
         compile group: 'jstl', name: 'jstl', version: '1.2'
 
-        compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.9.v20180320'
-        compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.9.v20180320'
-
-        compile group: 'javassist', name: 'javassist', version: '3.12.1.GA'
+        compile group: 'org.springframework', name: 'spring-webmvc', version: "5.0.4.RELEASE"
     }
     war {
         archiveName='autosalon.war'
