--- a/buildSrc/analyze.gradle
+++ b/buildSrc/analyze.gradle
@@ -64,7 +64,7 @@ jacocoTestReport {
     }
     afterEvaluate {
         classDirectories = files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: ['**/model/**', '**/config/**', '**/config/**', '**/entity/**',
+            fileTree(dir: it, exclude: ['**/model/**', '**/config/**', '**/config/**', '**/model/**',
                                         '**/*Main*/**', '**/roman/**'])
         })
     }
