--- a/buildSrc/analyze.gradle
+++ b/buildSrc/analyze.gradle
@@ -64,8 +64,7 @@ jacocoTestReport {
     }
     afterEvaluate {
         classDirectories = files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: ['**/model/**', '**/config/**', '**/config/**', '**/entity/**',
-                                        '**/*Main*/**', '**/roman/**'])
+            fileTree(dir: it, exclude: ['**/model/**', '**/dto/**', '**/config/**', '**/*Main*/**', '**/roman/**'])
         })
     }
 }
