--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ project("autosalon") {
         compile group: 'javax.servlet.jsp', name: 'javax.servlet.jsp-api', version: '2.3.1'
         compile group: 'jstl', name: 'jstl', version: '1.2'
         compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.11.Final'
+        compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
         compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.2.11.Final'
         compile group: 'org.springframework', name: 'spring-webmvc', version: "5.0.4.RELEASE"
     }
