--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,7 @@ project("education") {
     apply plugin: 'war'
 
     dependencies {
-        compile group: 'org.springframework', name: 'spring-webmvc', version: "$springVersion"
+        compile group: 'org.springframework', name: 'spring-webmvc', version: '5.0.4.RELEASE'
         compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'
         compile group: 'javax.servlet', name: 'jstl', version: '1.2'
     }
