--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,7 @@ project("education") {
 
     dependencies {
         compile group: 'org.springframework', name: 'spring-webmvc', version: '5.0.4.RELEASE'
+        compile group: 'javax.servlet.jsp', name: 'javax.servlet.jsp-api', version: '2.3.1'
         compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'
         compile group: 'javax.servlet', name: 'jstl', version: '1.2'
     }
