--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,9 +1,6 @@
-<<<<<<< HEAD
-#Sun Apr 15 21:19:35 EEST 2018
-=======
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.5.1-bin.zip
->>>>>>> 6579f7c119d033041376e9ec9ff1cbe4a95d31ea
+#Wed Apr 25 21:08:30 MSK 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-zipStorePath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
+zipStorePath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.5.1-all.zip
