--- a/autosalon/src/main/resources/config.properties
+++ b/autosalon/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=org.h2.Driver
-jdbc.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+jdbc.url=jdbc:h2:mem:autosalon;DB_CLOSE_DELAY=-1
 jdbc.user=sa
 jdbc.pass=sa
 
