--- a/buildSrc/dependencies.gradle
+++ b/buildSrc/dependencies.gradle
@@ -57,7 +57,7 @@ class SharedDependencies {
         testCompile group: "org.assertj", name: "assertj-core", version: "3.3.0"
         testCompile group: "org.hamcrest", name: "hamcrest-core", version: "1.3"
         testCompile group: "org.hamcrest", name: "hamcrest-library", version: "1.3"
-        testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+        testCompile group: 'org.mockito', name: 'mockito-inline', version: '2.18.0'
         testCompile group: 'org.springframework', name: 'spring-test', version: "$springVersion"
     }
 }
